[package]
name = "esp32rs"
version = "0.1.0"
authors = ["litchipi <litchi.pi@protonmail.com>"]
edition = "2018"
required-features = ["xtensa-lx-rt/lx6", "xtensa-lx/lx6", "esp32-hal"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xtensa-lx-rt = "0.5.0"
xtensa-lx = "0.3.0"
panic-halt = "0.2.0"

esp32-hal = "0.2.0"
